--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "build": "webpack -p"
   },
   "dependencies": {
-    "react": "15.5.4",
-    "react-dom": "15.5.4",
-    "webpack": "1.13.1",
-    "react-player": "0.18.0"
+    "@cljs-oss/module-deps": "^1.1.1",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
+    "react-player": "0.18.0",
+    "webpack": "4.19.1"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.1.0"
   }
 }
