--- a/package.json
+++ b/package.json
@@ -2,18 +2,15 @@
   "name": "zefstyle",
   "version": "0.0.2",
   "author": "tomer.weller@gmail.com",
-  "scripts": {
-    "watch": "webpack -d --watch",
-    "build": "webpack -p"
-  },
   "dependencies": {
     "@cljs-oss/module-deps": "^1.1.1",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
-    "react-player": "0.18.0",
-    "webpack": "4.19.1"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-player": "^0.18.0"
   },
   "devDependencies": {
-    "webpack-cli": "^3.1.0"
+    "browser-resolve": "1.11.2",
+    "module-deps": "4.0.8",
+    "resolve": "^1.3.3"
   }
 }
